# project-mind-mcp

./: .gitignore  .gitmessage  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  bm25_index.py  cache_manager.py  code_intelligence.py  codebase_indexer.py  config.py  context.py  exceptions.py  git_utils.py  incremental_indexing.py  logger.py  mcp_server.py  memory_limited_indexer.py  memory_manager.py  pyproject.toml  run_mcp.bat  run_mcp.sh  test_logging.py  test_memory_limits.py  test_unicode_handling.py  vector_store_manager.py
.github/workflows/: ci.yml
docs/: TIME_SAVINGS_ANALYSIS.md
docs/api/: tools-reference.md
docs/guides/: getting-started.md  performance.md
tests/: test_cache_manager.py  test_config.py  test_context.py  test_git_utils.py  test_incremental_indexing.py  test_indexing_limit.py  test_logging.py  test_mcp_tools.py  test_memory_limited_indexer.py  test_memory_limits.py  test_path_validation.py  test_search.py  test_stdio.py  test_transactional_save.py  test_unicode_handling.py
