[project]
name = "projectmind"
version = "0.4.0"
description = "Local Context & Memory MCP Server with RAG capabilities"
authors = [
    {name = "Mykola Riabokon"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "mcp>=0.1.0",
    "chromadb>=0.4.0,<0.5.0",
    "sentence-transformers>=2.2.0",
    "langchain-text-splitters>=0.0.1",
    "GitPython>=3.1.0",
    "radon>=6.0.0",
    "pylint>=3.0.0",
    "numpy<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "mcp_server",
    "config",
    "logger",
    "cache_manager",
    "vector_store_manager",
    "memory_manager",
    "codebase_indexer",
    "incremental_indexing",
    "memory_limited_indexer",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501", "C901"]  # Line too long, complexity

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "sentence_transformers.*",
    "langchain_text_splitters.*",
    "git.*",
    "mcp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=. --cov-report=term-missing"
